--- a/package.json
+++ b/package.json
@@ -10,14 +10,15 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "13.5.8",
+    "next": "^16.1.6",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
   "devDependencies": {
+    "@types/node": "25.2.3",
     "@types/react": "18.0.28",
     "autoprefixer": "10.4.14",
-    "postcss": "8.4.24",
+    "postcss": "^8.5.6",
     "tailwindcss": "3.4.7",
     "typescript": "5.2.2"
   }
