--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,10 +16,9 @@ jobs:
       - name: Install dependencies
         run: |
           npm ci
-      - name: Build and export
+      - name: Build
         run: |
           npm run build
-          npm run export
       - name: Deploy to gh-pages
         uses: peaceiris/actions-gh-pages@v3
         with:
