--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -28,9 +28,9 @@ jobs:
           cache: npm
 
       - name: Install dependencies
-        run: npm ci
-
-      - name: Build (static export via output: export)
+        run: npm ci  
+        
+      - name: "Build (static export via output: export)"
         run: npm run build
         env:
           BASE_PATH: ""
